improve basic example

--- a/example/basic/Makefile
+++ b/example/basic/Makefile
@@ -4,10 +4,9 @@ CC = gcc
 
 LIBS = -lpthread
 
-# SRCFOLDER
-SRCDIR = ../..
+SRCDIR = ../../
 # VPATH = $(SRCDIR)
-SOURCE = $(wildcard  $(SRCDIR)/*.h $(SRCDIR)/*.c)
+SOURCE = $(wildcard  $(SRCDIR)*.c)
 # $(info var in $(SOURCE))
 
 PROM = basic.out
@@ -15,18 +14,7 @@ PROM = basic.out
 all: $(PROM)
 
 basic.out: $(SOURCE) basic.c
-	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
-
-# chat-client.out: generic.h chat.h http.o readwrite.c chat-client.c
-# 	$(CC) $(CFLAGS) -o chat-client.out http.o readwrite.c chat-client.c $(LIBS)
-
-# chat-server.out: chat.h thread-pool.o tcp-server.o http.o connection.o chat-server.c
-# 	$(CC) $(CFLAGS) -o chat-server.out thread-pool.o tcp-server.o http.o connection.o chat-server.c $(LIBS)
-
-# http.o: generic.h
-# connection.o: generic.h
-# tcp-server.o: generic.h 
-# thread-pool.o: thread-pool.h
+	$(CC) $(CFLAGS) $^ -o $@ $(LIBS)
 
 clean:
 	rm $(PROM)
