--- a/example/chat-group/Makefile
+++ b/example/chat-group/Makefile
@@ -3,6 +3,10 @@ INC_DIR = ../../src/
 CFLAGS = -g -Wall -I$(INC_DIR)
 CC = gcc
 
+ifdef DEBUG
+CFLAGS += -g -DDEBUG
+endif
+
 LIBS = -lpthread
 
 SRCDIR = $(INC_DIR)
