--- a/example/basic/Makefile
+++ b/example/basic/Makefile
@@ -1,11 +1,11 @@
 INC_DIR = ../../src/
 
-CFLAGS = -Wall -I$(INC_DIR)
+CFLAGS = -I$(INC_DIR)# -Wall
 CC = gcc
 
-ifdef DEBUG
+# ifdef DEBUG
 CFLAGS += -g -DDEBUG
-endif
+# endif
 
 LIBS = -lpthread
 
